Finshed working on the endpoint to get a single property advert
